--- a/index.html
+++ b/index.html
@@ -44,11 +44,9 @@
 	<input type="radio" name="burrito" value="Power Burrito" id="powerburrito"><br><br>
 	<label for="beanburrito"><img src="beanburrito.jpg"></label>
 	<input type="radio" name="burrito" value="Bean Burrito" id="beanburrito"><br><br><br>
+	<a href="burritoquiz/burritoanswer.html">
 	<input type="button" name="submit" value="submit">
 	</form>
-	<footer>
-  <a href="file:///Users/student_07/Desktop/pages/form.html">
-  Contact Me</a>
-</footer>
+	
 </body>
 </html>
