--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<input type="radio" name="burrito" value="Power Burrito" id="powerburrito"><br><br>
 	<label for="beanburrito"><img src="beanburrito.jpg"></label>
 	<input type="radio" name="burrito" value="Bean Burrito" id="beanburrito"><br><br><br>
-	<a href="burritoquiz/burritoanswer.html">
+	<a href="burritoanswer.html">
 	<input type="button" name="submit" value="submit">
 	</form>
 	
