--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<label for="beanburrito"><img src="beanburrito.jpg"></label>
 	<input type="radio" name="burrito" value="Bean Burrito" id="beanburrito"><br><br><br>
 	<a href="burritoanswer.html">
-	<input type="button" name="submit" value="submit">
+	<input type="button" name="submit" value="submit"></a>
 	</form>
 	
 </body>
